Enhance figure caption and future directions section

--- a/Manuscript/Minor_Report.tex
+++ b/Manuscript/Minor_Report.tex
@@ -94,7 +94,6 @@
 
 
 \noindent
-Keywords: 
 
 
 \tableofcontents
@@ -800,9 +799,10 @@ This was just one stochastic run with just one initial condition, $30\%$ coopera
 \begin{figure}[ht]
   \centering
       \includegraphics[width=0.8\textwidth]{SH_NWS_fixation_bar_chart_test.pdf}
- \caption{}
+ \caption{This figure is used to show the if the NWS network and well-mixed population, crossing the analytical unstable tipping point.}
   \label{fig:9}
 \end{figure}
+As future directions of this report, we're going to walk through the multi-player game dynamics, dynamic networks and the application of this framework to understand biological systems.
 
 
 
@@ -817,12 +817,12 @@ This was just one stochastic run with just one initial condition, $30\%$ coopera
 
 
 
-\textbf{Code availability}.
-Appropriate computer code describing the model is available at 
-\texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
+%\textbf{Code availability}.
+%Appropriate computer code describing the model is available at 
+%\texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
 
-\section{Acknowledgements}
-\texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
+
+%\texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
 
 
 \bibliographystyle{naturemag}
