--- a/Manuscript/Minor_Report.tex
+++ b/Manuscript/Minor_Report.tex
@@ -21,6 +21,7 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{float}
 \usepackage{times}
+\usepackage{pdfpages}
 \newcommand{\Fig}[1]{Figure~\ref{fig:#1}}
 
 \renewcommand{\baselinestretch}{1.5}
@@ -70,16 +71,6 @@
 \newcommand{\cha}[1]{\textcolor{darkgreen}{(#1)}}
 
 
-\title{\vspace*{-22mm}\bf Evolutionary Game Theory for Studying Biological Evolution}
-%\author{Chaitanya S. Gokhale$^{1}$, Joseph Bulbulia$^{2,3}$, Marcus Frean$^{4}$\\
-%\normalsize $^1$Research Group for Theoretical Models of Eco-evolutionary Dynamics\\
-%\normalsize Department of Evolutionary Theory, \\
-%\normalsize Max-Planck Institute for Evolutionary Biology, 24306 Pl\"{o}n, Germany, \\
-%\normalsize $^2$School of Humanities, Faculty of Arts, University of Auckland, New Zealand \\
-%\normalsize $^3$Max Planck Institute for the Science of Human History, Jena, Germany \\
-%\normalsize $^4$School of Engineering and Computer Science, \\
-%\normalsize Victoria University of Wellington, New Zealand
-%}
 
 
 \date{}
@@ -87,16 +78,12 @@
 \begin{document}
 
 
-\linenumbers
-\maketitle
-
-
-
-
-\noindent
-
-
+%\linenumbers
+%\noindent
+\includepdf[pages={1-2}]{Certificate .pdf}
+\includepdf[pages={1}]{Certificate_TEcoEvo.pdf}
 \tableofcontents
+\newpage
 \section{Introduction}
 One of the most important part of evolutionary biology revolves around the basic concept of cooperation. Cooperation is required to build new dimensions of biological organization. Cooperation forms the basis of the emergence of genomes, cells, multi-cellular organisms, social insects and human society. Cooperation implies that selfish replicators are willing to sacrifice a part of their reproductive capacity so that they can assist others \citep{Nowak2006}.
 Studies suggest that bacterial colonies which form biofilm require high level of cooperation because secreted extracellular polymeric material is a shared resource and can be advantageous to entire bacterial colonies \citep{Xavier2007}. In case of \textit{Dictyostelium discoideum}, also known as social amoeba, where some of the cells become self-sacrificing to create supportive stalks in which a colony of spores propagates \citep{Medina2024}. Also, social insects showing extreme cooperative specialization whereby workers sacrifice their own reproduction in order to contribute to the overall colony's fitness \citep{Fischman2011}.\\
@@ -401,7 +388,7 @@ Now we can denote the average payoff of $a$ and $b$ strategies as $\pi_a$ and $\
 \end{align}
 Now, a question can arise, why are we using $N-1$ instead of $N$? We have to understand that instead of an infinitely large population, we are using a real finite population and for that, we have to remove the particular individual who is observing or analysing the situation, so we use $N-1$.\\
 Now, we can move to the part of the evolutionary dynamics for the finite population where randomness is involved in the population.
-So, we will go for the stochastic processes.
+So, we will proceed with stochastic processes.
 For these stochastic processes, we will focus on the Moran process. It consists of two events: birth and death. 
 For the birth process, one subject is chosen randomly, and it produces its identical copy, and for the death process, again, one random subject is chosen from the population and eliminated. 
 It means by introducing randomness with the birth-death process, now this theory can change the population with each time step, and for $N$ steps it will control a generation \cite{Moran1962}
@@ -705,6 +692,7 @@ r = \frac{f_C}{f_D} = \frac{1 - w + w \cdot \pi_C}{1 - w + w \cdot \pi_D} \label
 Now, if we apply the $Bd$ update mechanism in a population size of $N$, where there are $n$ mutants (cooperators) and $N_n$ wild types (defectors). Then, the transition probability of mutant number being increased by one and the transition probability of mutant number being decreased by one can be calculated using the equation \eqref{eq:50} and \eqref{eq:51}, where r = relative fitness = $\frac{1 - w + w \cdot \pi_C}{1 - w + w \cdot \pi_D}$. Now, we can calculate the fixation probability using the equation \eqref{eq:52}.\\
 Now, we have simulated the stag-hunt game on square-lattice with Moore neighbourhood. Square lattice is the easiest way to construct a structured population. Apart from it, many networks are said to have small-world properties, in other words, the network of any two of their members can be communicated with each other via a small number of linkages (steps). Thus, the Newman-Watts-Strogatz (NWS) algorithm generates a small-world network, which is executed in this study. This algorithm initially forms a d-dimensional lattice,in our case $d=1$.  Then, each vertex is drawn an edge with probability $\beta$.  The average path length between any two vertices in a NWS network is very small and the clustering coefficient is very high. In this simulation, we used population size of $33$, with selection intensity of $w=0.5$. While constructing the NWS small world network, probability $\beta = 0.4$ and the average neighbours per node is $6$.
 In this study we tried to simulate the stag hunt game with same conditions like in sqaure lattice on NWS network.
+\newpage
 \section{Results}
 \subsection{Replicator Dynamics in Infinite Populations}
 In this section, first we analysed the replicator dynamics for three different two-player two-strategy games to determine the internal equilibrium and stability conditions.
@@ -778,7 +766,7 @@ Simulation in a square lattice starts with randomly placed $30\%$ cooperators, a
     At time step $0$, the cooperators are $300\%$ and defectors are $70\%$. 
     At time step $1000$, the cooperators are $34.3\%$ and defectors are $65.7\%$. 
     At time step $2000$, cooperators are $37.1\%$ and defectors are $62.9\%$. 
-    At time step $3000$, the cooperators are $42.9\%$ and defectors are $57.1\%$.}
+    At time step $3000$, the cooperators are $42.9\%$ and defectors are $57.1\%$. This is only one stochastic step.}
     \label{fig:7}
 \end{figure}
 Now, let's analyse the results for the NWS small world network. Simulations of the same game on an NWS network ($N=33$, average degree $k=6$, rewiring probability $b=0.4$) showed that population takeover took place quickly in the initial random distribution of 30 percent cooperators, and fixation was achieved in only 381 time steps. The addition of shortcut links and the large clustering coefficient of the NWS network was able to establish the distant connectivity of cooperative clusters, which led to quick dissemination and significantly reduced the time scale under which cooperation reached fixation.
@@ -802,7 +790,7 @@ This was just one stochastic run with just one initial condition, $30\%$ coopera
  \caption{This figure is used to show the if the NWS network and well-mixed population, crossing the analytical unstable tipping point.}
   \label{fig:9}
 \end{figure}
-As future directions of this report, we're going to walk through the multi-player game dynamics, dynamic networks and the application of this framework to understand biological systems.
+As future directions of this report, we're going to walk through the multi-player game dynamics, dynamic networks and the application of this framework to understand biological systems such as cellular dynamics of burn wound healing.
 
 
 
@@ -825,7 +813,7 @@ As future directions of this report, we're going to walk through the multi-playe
 %\texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
 
 
-\bibliographystyle{naturemag}
+\bibliographystyle{apa}
 \bibliography{references.bib}
 
 \renewcommand{\theequation}{SI.\arabic{equation}}
@@ -834,10 +822,6 @@ As future directions of this report, we're going to walk through the multi-playe
 \renewcommand{\thefigure}{SI.\arabic{figure}}
 \setcounter{figure}{0}
 
-\section{Supplementary material}
-
-
-\subsection{Analysis of the simple system}
 
 
 
